Fix ul CSS Issues and CSS Contact alignment

--- a/assets/scss/_config.scss
+++ b/assets/scss/_config.scss
@@ -22,6 +22,7 @@ $maroon:  #85144B;
 $white:  #fff;
 $silver: #ddd;
 $grey:   #aaa;
+$banner-grey: #3a3a3c;
 $black:  #111;
 
 // Color variables
